--- a/public/app/styles/_settings.sass
+++ b/public/app/styles/_settings.sass
@@ -19,8 +19,10 @@
 
 // $brand-primary:         #428bca !default;
 // $brand-success:         #5cb85c !default;
+$brand-success:         #23b0a3
 // $brand-info:            #5bc0de !default;
 // $brand-warning:         #f0ad4e !default;
+$brand-warning:         #ff754f
 // $brand-danger:          #d9534f !default;
 
 
@@ -340,6 +342,7 @@
 
 // // Basics of a navbar
 // $navbar-height:                    50px !default;
+$navbar-height:                    70px
 // $navbar-margin-bottom:             $line-height-computed !default;
 // $navbar-border-radius:             $border-radius-base !default;
 // $navbar-padding-horizontal:        floor(($grid-gutter-width / 2)) !default;
@@ -347,11 +350,14 @@
 // $navbar-collapse-max-height:       340px !default;
 
 // $navbar-default-color:             #777 !default;
+$navbar-default-color:				#fff
 // $navbar-default-bg:                #f8f8f8 !default;
+$navbar-default-bg: 				#323C3E
 // $navbar-default-border:            darken($navbar-default-bg, 6.5%) !default;
 
 // // Navbar links
 // $navbar-default-link-color:                #777 !default;
+$navbar-default-link-color: 		#fff
 // $navbar-default-link-hover-color:          #333 !default;
 // $navbar-default-link-hover-bg:             transparent !default;
 // $navbar-default-link-active-color:         #555 !default;
